Util cleanup.